patient update w/ id check and error mgmt
