# model/utils.go
@@ -4,6 +4,8 @@ import (
 	"net/http"
 
 	"github.com/ulule/paging"
+
+	"github.com/google/uuid"
 )
 
 // PaginatorOptions contains paginator options for the current application
@@ -29,4 +31,24 @@ func CreateRequestPaginatorFromRequest(r *http.Request) *RequestPaginator {
 type PageFetchResult struct {
 	Total   int64
 	Results []interface{}
+}
+
+// ErrorCode contians all the possible error code for API calls
+type ErrorCode int
+
+const (
+	INALID_INPUT ErrorCode = 1 + iota
+	RESOURCE_IDENTIFIER_MISMATCH
+)
+
+var errorCodes = [...]string{
+	"INALID_INPUT",
+	"RESOURCE_IDENTIFIER_MISMATCH",
+}
+
+// ErrorResponse contains the error information in case of an api call fails
+type ErrorResponse struct {
+	Code    ErrorCode
+	Message string
+	TraceID uuid.UUID
 }
